--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Spot\\Cms\\": "src"
+            "Spot\\Api\\": "src"
         }
     }
 }
