Excluding top level 3rd party files from codeclimate reports.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -15,3 +15,9 @@ exclude_paths:
   - migrations/**/*
   - spec/**/*
   - src/DefaultServiceProvider.php
+  - .codeclimate.yml
+  - .gitignore
+  - .travis.yml
+  - composer.json
+  - phinx.yml
+  - phpspec.yml
