--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "tobscure/json-api": "^0.2.1"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.3"
+        "phpspec/phpspec": "2.3.*"
     },
     "autoload": {
         "psr-4": {
