--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "zendframework/zend-diactoros": "^1.1",
         "monolog/monolog": "^1.17",
         "pimple/pimple": "^3.0",
-        "nikic/fast-route": "^0.6.0",
+        "nikic/fast-route": "~0.6.0",
         "particle/validator": "^2.0",
         "particle/filter": "^1.0",
-        "robmorgan/phinx": "^0.4.6",
+        "robmorgan/phinx": "~0.5.0",
         "ramsey/uuid": "^3.0",
-        "tobscure/json-api": "^0.2.1"
+        "tobscure/json-api": "~0.2.1"
     },
     "require-dev": {
         "phpspec/phpspec": "2.3.*"
