Excluding some more files from CodeClimate checks: ServiceProvider classes (don't really care about the wiring) and ParticleFixes (temporary code while PR hasn't been accepted).

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,6 +14,8 @@ exclude_paths:
   - config/**/*
   - migrations/**/*
   - spec/**/*
+  - src/Common/ParticleFixes/*
+  - src/SiteContent/SiteContentModuleBuilder.php
   - src/DefaultServiceProvider.php
   - .codeclimate.yml
   - .gitignore
