--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "particle/filter": "^1.0",
         "robmorgan/phinx": "~0.5.0",
         "ramsey/uuid": "^3.0",
-        "tobscure/json-api": "~0.2.1"
+        "tobscure/json-api": "~0.2.1",
+        "henrikbjorn/phpspec-code-coverage": "^2.0"
     },
     "require-dev": {
         "phpspec/phpspec": "2.3.*"
