--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,12 @@
         "robmorgan/phinx": "~0.5.0",
         "ramsey/uuid": "^3.0",
         "tobscure/json-api": "~0.2.1",
-        "henrikbjorn/phpspec-code-coverage": "^2.0"
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "dev-master",
-        "phpspec/prophecy": "dev-master"
+        "phpspec/prophecy": "dev-master",
+        "henrikbjorn/phpspec-code-coverage": "^2.0"
     },
     "autoload": {
         "psr-4": {
