Updated PhpSpec, can now remove all docblock typehints and use actual typehints.

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "league/flysystem": "^1.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "dev-master",
-        "phpspec/prophecy": "dev-master",
+        "phpspec/phpspec": "^2.5",
+        "phpspec/prophecy": "^1.6",
         "henrikbjorn/phpspec-code-coverage": "^2.0"
     },
     "autoload": {
