Modified scrutinizer config a bit.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -16,3 +16,18 @@ filter:
         - "src/Common/ParticleFixes/*"
         - "src/SiteContent/SiteContentServiceProvider.php"
         - "src/DefaultServiceProvider.php"
+
+checks:
+    php: true
+coding_style:
+    php:
+        spaces:
+            before_parentheses:
+                closure_definition: true
+            around_operators:
+                concatenation: true
+        upper_lower_casing:
+            keywords:
+                general: lower
+            constants:
+                true_false_null: lower
