--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -14,6 +14,7 @@ filter:
     paths: ["src/*"]
     excluded_paths:
         - "src/Common/ParticleFixes/*"
+        - "src/FileManager/FileManagerServiceProvider.php"
         - "src/SiteContent/SiteContentServiceProvider.php"
         - "src/DefaultServiceProvider.php"
 
