--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "robmorgan/phinx": "~0.5.0",
         "ramsey/uuid": "^3.0",
         "tobscure/json-api": "~0.2.1",
-        "league/flysystem": "^1.0"
+        "league/flysystem": "^1.0",
+        "league/glide": "^1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.5",
