--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "ramsey/uuid": "^3.0",
         "tobscure/json-api": "~0.2.1",
         "league/flysystem": "^1.0",
-        "league/glide": "^1.0"
+        "imagine/imagine": "^0.6.3"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.5",
