--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,6 +13,7 @@ build:
 filter:
     paths: ["src/*"]
     excluded_paths:
+        - "src/ImageEditor/ImageEditorServiceProvider.php"
         - "src/FileManager/FileManagerServiceProvider.php"
         - "src/SiteContent/SiteContentServiceProvider.php"
         - "src/DefaultServiceProvider.php"
