--- a/phpspec.yml
+++ b/phpspec.yml
@@ -14,6 +14,7 @@ code_coverage:
     whitelist:
         - src
     blacklist_files:
+        - "src/ImageEditor/ImageEditorServiceProvider.php"
         - "src/FileManager/FileManagerServiceProvider.php"
         - "src/SiteContent/SiteContentServiceProvider.php"
         - "src/DefaultServiceProvider.php"
