--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
         "zendframework/zend-diactoros": "^1.1",
         "monolog/monolog": "^1.17",
         "pimple/pimple": "^3.0",
-        "nikic/fast-route": "~0.6.0",
+        "nikic/fast-route": "^1.0",
         "particle/validator": "^2.0",
         "particle/filter": "^1.0",
         "robmorgan/phinx": "~0.5.0",
         "ramsey/uuid": "^3.0",
         "tobscure/json-api": "~0.2.1",
         "league/flysystem": "^1.0",
-        "imagine/imagine": "^0.6.3"
+        "imagine/imagine": "^0.6"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.5",
