--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,15 @@
     ],
     "require": {
         "spot/api": "~1.0.0-dev",
-        "zendframework/zend-diactoros": "^1.1",
-        "monolog/monolog": "^1.17",
+        "zendframework/zend-diactoros": "^1.3",
+        "monolog/monolog": "^1.20",
         "pimple/pimple": "^3.0",
         "nikic/fast-route": "^1.0",
-        "particle/validator": "^2.0",
-        "particle/filter": "^1.0",
-        "robmorgan/phinx": "~0.5.0",
-        "ramsey/uuid": "^3.0",
-        "tobscure/json-api": "~0.2.1",
+        "particle/validator": "^2.1",
+        "particle/filter": "^1.4",
+        "robmorgan/phinx": "^0.6",
+        "ramsey/uuid": "^3.4",
+        "tobscure/json-api": "^0.3",
         "league/flysystem": "^1.0",
         "imagine/imagine": "^0.6",
         "symfony/console": "^3.1"
