Added Content-Security-Policy enforcement middleware.

--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,15 @@
     "require-dev": {
         "phpspec/phpspec": "^2.5",
         "phpspec/prophecy": "^1.6",
-        "henrikbjorn/phpspec-code-coverage": "^2.0"
+        "henrikbjorn/phpspec-code-coverage": "^2.0",
+        "paragonie/csp-builder": "^2.0"
     },
     "autoload": {
         "psr-4": {
             "Spot\\": "src"
         }
+    },
+    "suggests": {
+        "paragonie/csp-builder": "When using Content-Security-Policy middleware"
     }
 }
