--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,5 +3,5 @@
 
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule ^api/(.*)$ api.php [QSA,L]
 </IfModule>
