Accidentally committed local modification top phpspec.yml

--- a/phpspec.yml
+++ b/phpspec.yml
@@ -3,8 +3,8 @@ suites:
         namespace: Spot
         psr4_prefix: Spot
 
-#extensions:
-#    - PhpSpec\Extension\CodeCoverageExtension
+extensions:
+    - PhpSpec\Extension\CodeCoverageExtension
 
 code_coverage:
     format:
