--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/WebspotCode/SpotApi"
+            "url": "https://github.com/jschreuder/SpotApi"
         }
     ],
     "require": {
