--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,35 +1,54 @@
-build:
-    environment:
-        php:
-            version: 7.0.7
-    tests:
-        override:
-            -
-                command: 'bin/phpspec run'
-                coverage:
-                    file: 'coverage.xml'
-                    format: 'php-clover'
-
 filter:
-    paths: ["src/*"]
     excluded_paths:
+        - "config/app_init.php"
+        - "spec/*"
+        - "src/Application/HttpFactoryProvider.php"
+        - "src/Auth/AuthRoutingProvider.php"
         - "src/Auth/AuthServiceProvider.php"
+        - "src/Auth/AuthServiceProviderInterface.php"
+        - "src/ImageEditor/ImageEditorRoutingProvider.php"
         - "src/ImageEditor/ImageEditorServiceProvider.php"
+        - "src/ImageEditor/ImageEditorServiceProviderInterface.php"
+        - "src/FileManager/FileManagerRoutingProvider.php"
         - "src/FileManager/FileManagerServiceProvider.php"
+        - "src/FileManager/FileManagerServiceProviderInterface.php"
+        - "src/SiteContent/SiteContentRoutingProvider.php"
         - "src/SiteContent/SiteContentServiceProvider.php"
+        - "src/SiteContent/SiteContentServiceProviderInterface.php"
         - "src/DefaultServiceProvider.php"
 
 checks:
-    php: true
+    php:
+        code_rating: true
+        duplication: false
+    javascript: true
+
 coding_style:
     php:
         spaces:
-            before_parentheses:
-                closure_definition: true
             around_operators:
                 concatenation: true
-        upper_lower_casing:
-            keywords:
-                general: lower
-            constants:
-                true_false_null: lower
+
+build:
+    image: default-bionic
+    environment:
+        php:
+            ini:
+                'xdebug.mode': 'coverage'
+                'error_reporting': 3
+    nodes:
+        analysis:
+            environment:
+                php: 8.1
+            tests:
+                override:
+                    - php-scrutinizer-run
+        phpspec:
+            environment:
+                php: 8.1
+            tests:
+                override:
+                  - command: 'bin/phpspec run'
+                    coverage:
+                        file: 'coverage.xml'
+                        format: 'php-clover'
