--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,21 +1,11 @@
 suites:
-    acme_suite:
+    spotcms:
         namespace: Spot
         psr4_prefix: Spot
 
 extensions:
-    - PhpSpec\Extension\CodeCoverageExtension
-
-code_coverage:
-    format:
-        - clover
-    output:
-        clover: coverage.xml
-    whitelist:
-        - src
-    blacklist_files:
-        - "src/Auth/AuthServiceProvider.php"
-        - "src/ImageEditor/ImageEditorServiceProvider.php"
-        - "src/FileManager/FileManagerServiceProvider.php"
-        - "src/SiteContent/SiteContentServiceProvider.php"
-        - "src/DefaultServiceProvider.php"
+    FriendsOfPhpSpec\PhpSpec\CodeCoverage\CodeCoverageExtension:
+        format:
+            - clover
+        output:
+            clover: coverage.xml
