--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/routing": "^6.0",
         "symfony/console": "^6.2",
         "lcobucci/jwt": "^4.3",
+        "neomerx/json-api": "^4.0",
         "dflydev/fig-cookies": "^3.0",
         "laminas/laminas-filter": "^2.31",
         "laminas/laminas-validator": "^2.30",
