--- a/angular.json
+++ b/angular.json
@@ -7,26 +7,26 @@
       "projectType": "application",
       "schematics": {},
       "root": "",
-      "sourceRoot": "web/admin",
+      "sourceRoot": "web-src/admin",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "web/admin/dist/",
-            "index": "web/admin/index.html",
-            "main": "web/admin/main.ts",
+            "outputPath": "web/admin/",
+            "index": "web-src/admin/index.html",
+            "main": "web-src/admin/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "web/admin/favicon.ico",
-              "web/admin/assets"
+              "web-src/admin/favicon.ico",
+              "web-src/admin/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "web/admin/styles.css"
+              "web-src/admin/styles.css"
             ],
             "scripts": []
           },
@@ -84,12 +84,12 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "web/admin/favicon.ico",
-              "web/admin/assets"
+              "web-src/admin/favicon.ico",
+              "web-src/admin/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "web/admin/styles.css"
+              "web-src/admin/styles.css"
             ],
             "scripts": []
           }
